:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Alan Ezust, cy6erGn0m,
Bad Sector, jclopes, Dale Anson, Anshal Shukla, Ryan Mott, Damien Radtke,
Matthew Gilbert, Dennis Hotson, Kevin Hunter, encorejane, nherzing,
Evan Wright, Shlomy Reinstein, Marcelo Vanzin and Eric Le Lay for contributing
to this release.

{{{ Bug fixes
- If the current buffer is on a VFS that is not browseable (ex:http), trying
  to open a new file was trying to browse the path of the current file giving
  an error (Matthieu Casanova)

- The selectionLength status bar widget is now updated when jEdit starts, and
  says 0 instead of nothing if there is no selection (Matthieu Casanova)

- Fixed the file properties dialog when the VFS has no rename capability
  (Matthieu Casanova)

- Latex string literal fixed : when starting with `` the String literal can
  now end with " or '' (#3152515 - patch #3162735 Evan Wright)

- When jEdit is unable to autosave jEdit now logs a warning, but doesn't
  pop an error dialog every 30 seconds (#3154842 - Matthieu Casanova)

- When macros are reloaded, if one of them was overriding a built-in action,
  the action is not restored if the overriding macro is removed
  (#3110689 - Matthieu Casanova)

- Shortcuts option pane was showing shortcuts twice when an action was
  overridden by a macro or a plugin (Matthieu Casanova)

- Made jedit.exe to find JDK, so that jEdit runs only with JDK (without
  JRE) like 4.3.x and before. (SF.net bug #3134149 - Kazutoshi Satoda)

- Fix for tracker 3134215, restore previously opened files setting not being
  considered when restoring split configuration. (#3134215 - Dale Anson)

- After using save-as action on a read-only buffer the new buffer is no longer
  read-only (#3148102 - Matthieu Casanova)

- Applied patch from Ryan Mott that fixes textarea scrolling left
  automatically when selecting text at the end of a long line and trying to